# flask-django-proj

./: .gitignore  docker-compose.yml  main.py  manage.py  pyproject.toml
django_app/web/: asgi.py  settings.py  urls.py  wsgi.py
