[project]
name = "django-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[project.optional-dependencies]
flask_api = [
    "flask>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
]

django_web = [
    "django>=5.2.3",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.11.13",
]
